# Frankenzork-I

./: flake.nix  pyproject.toml
frankenzork/: __init__.py  geneva.py  main.py
frankenzork/scripts/: .schema.json  geneva.json
tests/: test_geneva.py
