[tool.poetry]
name = "Frankenzork I"
version = "0.1.0"
description = "First part to a Frankenstein-inspired zork-like video game"
authors = ["nulladmin1 <shrey.deogade@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
frankenzork = "frankenzork.main:main"
